@startuml
'https://plantuml.com/class-diagram

class ToDoListsManager {
    + main()
    + start()
}

class ToDoListsManagerController {
    - model: TaskListModel
    - selectedTask: Task
    - sortMode: boolean
    - toDoList: ObservableList
    - displayMode: String
    - newTaskTitle: TextField
    - newTaskDesc: TextField
    - newDueDate: TextField
    - taskView: TableView
    - viewOptions: ChoiceBox<String>
    - selectedList: ChoiceBox<String>
    - displayMode: String
    - newTaskDesc: TextField
    - newDueDate: TextField
    - taskView: TableView
    - taskColumn1: TableColumn
    - taskColumn2: TableColumn
    - taskColumn3: TableColumn
    - viewOptions: ChoiceBox<String>
    - sortByDateCheckBox: CheckBox
    + curDesc: String
    + curDueDate: String
    + getSelectedTask(): Task
    + setSelectedTask(Task)
    + generateErrors(String, String): boolean
    + taskAlreadyExists(String, ObservableList): boolean
    + taskMatchesOther(String, String, ObservableList): boolean
    + dateFormatWrong(String): boolean
    + inputIsBlank(String, String): boolean
    + descTooLong(String): boolean
    + tableIsEmpty(TableView): boolean
    + listIsEmpty(ObservableList): boolean
    + notGregorian(String): boolean
    + gregorianWarning()
    + displayInstructions()
    + initialize()
    + removeTaskButtonClicked()
    + editTaskButtonClicked()
    + saveSingleButtonClicked()
    + loadSingleButtonClicked()
    + addTaskButtonClicked()
    + viewButtonClicked()
    + clearButtonClicked()
    + getInstructions()
    + markButtonClicked()
    + sortBoxClicked()
}

class ToDoListsModel {
    + addNewTask(String, String, ObservableList)
    + changeView(String, ObservableList, TableView): ObservableList
    + editTask(String, String, String, ObservableList)
    + deleteTask(String, ObservableList)
    + loadList(File)
    + saveList(String)
    + generateSaveOutput(ObservableList): String
    + writeToFile(File, String)
    + wrapIfLong(String): String
    + clearList(ObservableList)
    + sortList(ObservableList, boolean): ObservableList
}

class Task {
    - description: String
    - due_date: String
    - completed: String
}

class EditTaskManagerController {
    + tempDesc: String
    + tempDueDate: String
    - submitButton: Button
    - editedDesc: TextField
    - editedDueDate: TextField

    + openEditWindow(String, String)
    + submitChangesButtonClicked(ActionEvent)
    + initialize(URL, ResourceBundle)
}

ToDoListsManager -- ToDoListsManagerController
EditTaskManagerController - ToDoListsManagerController
ToDoListsManagerController *--> ToDoListsModel
ToDoListsModel *--> Task

@enduml